# dockspawn

./: .gitignore  .python-version  AGENTS.md  README.md  example-notebook.ipynb  pyproject.toml
dockspawn/: __main__.py  cli.py  compose.py  gpu.py  ports.py  utils.py
templates/: docker-compose.yml
tests/: test_cli.py  test_core.py
